--- a/src/view/acteur.twig
+++ b/src/view/acteur.twig
@@ -12,7 +12,7 @@ echo <pre>
             <br>
             <img src = {{acteur.Photo}} alt = "Photo de l'acteur" width="250">
         
-        {% for m in movies %}
+        {% for m in acteur.films %}
             {{ m.titre }}
         {% endfor %}
         </div>
