--- a/src/view/acteurs.twig
+++ b/src/view/acteurs.twig
@@ -8,7 +8,7 @@
             <div id="act">
                 {{acteur.FirstName}} &nbsp;
                 {{acteur.LastName}} <br/>
-                <a href = "acteur/{{acteur.Id_acteur}}"><img src={{acteur.Photo}} width="250"></a><br>
+                <a href = "acteur/{{acteur.Id_acteur}}"><img src="public/images/{{acteur.Photo}}" width="250"></a><br>
                 <br>
             </div>
 
