--- a/src/view/add_acteur.twig
+++ b/src/view/add_acteur.twig
@@ -27,8 +27,8 @@
         <input type="hidden" name="id_film" value="{{film.Id_film}}">
     </div>
     <br>
-    <button type="submit">Ajouter le nouvel acteur</button>
-  </form>
+    <button class="bouton2">Ajouter le nouvel acteur</button>
+    </form>
   </div>
 
 {% endblock %}
