--- a/src/view/f_acteur.twig
+++ b/src/view/f_acteur.twig
@@ -15,7 +15,7 @@
         <input placeholder="Prénom de l'acteur" name="prenom" required/>
     </div>
     <br>
-    <button type="submit">Ajouter le nouvel acteur</button>
+    <button  class="bouton2">Ajouter le nouvel acteur</button>
   </form>
 </div>
 
