--- a/src/view/f_genre.twig
+++ b/src/view/f_genre.twig
@@ -12,7 +12,7 @@
       <input placeholder="Entrez ici le nouveau genre" name="nom" required/>
     </div>
     <br>
-    <button type="submit">Ajouter le nouveau genre</button>
+    <button  class="bouton2">Ajouter le nouveau genre</button>
 
   </form>
   </div>
