--- a/src/view/films.twig
+++ b/src/view/films.twig
@@ -4,12 +4,16 @@
 
 {% block content %}
 
+    {# echo <pre>
+    {{dump (session.user)}} #}
+
     <div id="selection">
+
     {% for film in films %}
         <div class="film">
-            {{film.Titre}} <br>
+            {{film.Titre}} <br><br>
             <a href ="film/{{film.id_film}}"><img src = "public/images/{{film.Affiche}}" alt ="Affiche du film" width="250"></a><br>
-            {{film.date_de_sortie}}<br>
+            {{film.date_de_sortie |date("Y") }}<br>
             <br>
         </div
 
