--- a/src/view/modiffilm.twig
+++ b/src/view/modiffilm.twig
@@ -40,7 +40,7 @@
         <input type="hidden" name="id_film" value="{{film.id_film}}">
         </div>
     <br>
-    <button type="submit ">Modifier le film</button>
+    <button class="bouton2">Modifier le film</button>
   </form>
   </div>
 
