--- a/public/style.css
+++ b/public/style.css
@@ -13,17 +13,85 @@ a.nav-link {   color:white !important;
 a.navbar-brand {   color:white !important;
 }
 
+button.btn, .btn-outline-sucess {
+    background-color: rgb(14, 14, 85)!important;
+    border-color: white!important;
+    color: white !important;
+}
+
 
 #title {
     display : flex;
     justify-content: center;
+    flex-direction: column;
     background-color: rgb(188, 218, 229);
     color: white;
     letter-spacing : 1.5px;
     font-family :'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size : 2em;
-    padding-top : 3%;  
+    margin-top: 2%;
+    padding-top : 3%; 
+    border-radius: 16px;
+    /* list-style-type : none;
+    text-decoration: none; */
 }
+
+#bienvenue {
+    text-align: center;
+    color : white !important;
+    margin-top : 3%;
+}
+
+.button_depart {
+
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    display: flex;
+    justify-content: space-around;
+    margin-top : 5%;
+}
+
+.button_depart button {
+    padding: 0.5%;
+    width:180px;
+    border: none;
+    border-radius: 6px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-style: italic;
+}
+
+.bouton {
+    background-color:  rgb(14, 14, 85)!important;
+    color: white;
+    padding: 0.5%;
+    width:180px;
+    border: none;
+    border-radius: 6px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-style: italic;
+}
+
+.bouton2 {
+    background-color: white !important;
+    color: rgb(14, 14, 85)!important;
+    border :  rgb(14, 14, 85)!important;
+    padding: 0.5%;
+    width:180px;
+    /* border: none; */
+    border-radius: 6px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-style: italic;
+}
+
+.button_depart button:hover {
+    transition : 2s ease-in-out;
+}
+
+a {
+    text-decoration: none;
+    color :rgb(14, 14, 85);
+}
+
+
 
 #ref {
     display : flex;
@@ -86,6 +154,7 @@ a.navbar-brand {   color:white !important;
     text-align: center;
 }
 
+
 .act {
     display: flex;
     justify-content: center;
@@ -137,8 +206,6 @@ img:hover {
     transform : scale(1.2);
 }
 
-/* #button {
-    display: flex;
-    justify-content: center;
-    text-decoration: none;
-} */
+.favoris {
+   text-align: center;  
+}
