--- a/src/view/f_film.twig
+++ b/src/view/f_film.twig
@@ -32,7 +32,7 @@
         </select>
         </div>
     <br>
-    <button type="submit">Ajouter le nouveau film</button>
+    <button  class="bouton2">Ajouter le nouveau film</button>
   </form>
   </div>
 
