--- a/src/view/f_realisateur.twig
+++ b/src/view/f_realisateur.twig
@@ -16,7 +16,7 @@
             <input placeholder="Prénom du realisateur" name="prenom" required/>
     </div>
     <br>
-    <button type="submit">Ajouter le nouveau réalisateur</button>
+    <button  class="bouton2">Ajouter le nouveau réalisateur</button>
 
   </form>
   </div>
