--- a/src/view/header.twig
+++ b/src/view/header.twig
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,6 +20,7 @@
     
 <div class="container">
     <div class="row">
+    
  
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
@@ -33,8 +36,10 @@
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="films">Tous les films </a></li>
-            <li><a class="dropdown-item" href="addfilm">Ajouter un film </a></li>
-            <!-- <li><a class="dropdown-item" href="modif_film">Modifier un film </a></li> -->
+              {% if session.user.role == 'admin' %}
+                <li><a class="dropdown-item" href="addfilm">Ajouter un film </a></li>
+              {% endif %}
+            {# <!-- <li><a class="dropdown-item" href="modif_film">Modifier un film </a></li> --> #}
           </ul>
         </li>
         <li class="nav-item dropdown">
@@ -43,7 +48,9 @@
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="acteurs">Tous les acteurs </a></li>
-            <li><a class="dropdown-item" href="addacteur">Ajouter un acteur </a></li>
+              {% if session.user.role == 'admin' %}
+                <li><a class="dropdown-item" href="addacteur">Ajouter un acteur </a></li>
+              {% endif %}
             {# <li><a class="dropdown-item" href="modifacteur">Modifier un acteur </a></li> #}
           </ul>
         </li>
@@ -53,7 +60,9 @@
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="realisateurs">Tous les realisateurs </a></li>
+            {% if session.user.role == 'admin' %}
             <li><a class="dropdown-item" href="addrealisateur">Ajouter un realisateur </a></li>
+             {% endif %}
             {# <li><a class="dropdown-item" href="modifrealisateur">Modifier un realisateur </a></li> #}
           </ul>
         </li>
@@ -63,11 +72,49 @@
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="genres">Tous les genres </a></li>
+            {% if session.user.role == 'admin' %}
             <li><a class="dropdown-item" href="addgenre">Ajouter un genre </a></li>
+            {% endif %}
             {# <li><a class="dropdown-item" href="modifgenre">Modifier un genre </a></li> #}
           </ul>
         </li>
       </ul>
+    </div>
+ 
+    
+
+      <span class="navbar-toggler-icon"></span>
+    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+      </div>
+      <div class="offcanvas-body">
+        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#"></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#"></a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Votre compte
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="profil">Profil</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#">Vos films préférés</a></li>
+            </ul>
+          </li>
+        </ul>
+        <form class="d-flex mt-3" role="search" action="search" method="POST">
+          <input class="form-control me-2" type="search" placeholder="Rechercher" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Rechercher</button>
+        </form>
+      </div>
     </div>
   </div>
 </nav>
@@ -76,9 +123,31 @@
 
 
 <div id="title">
+      <div id="ref">
         <h1>HELLO CINE</h1>  
+      </div>
+      <div id="ref">
+        <h2>La nouvelle référence du cinéma</h2>
+    </div>
+</div>
+
+    <div id="bienvenue">
+    <h2> Bienvenue {{session.user.prenom}} {{session.user.nom}}
+
     </div>
 
-    <div id="ref">
-        <h2>La nouvelle référence du cinéma</h2>
+    <div class="button_depart">
+
+    {% block content %}
+
+      {% if (session) %} 
+      <button><a href="deconnexion">Se déconnecter</a></button>
+      {% else %}
+        <button><a href="connexion">Se connecter</a></button>
+        <button><a href="inscription">S'inscrire</a></button>
+        <button><a href="deconnexion">Se déconnecter</a></button>
+      {% endif %}
+
+    {% endblock %}
+
     </div>
